--- a/src/css/flexBox.css
+++ b/src/css/flexBox.css
@@ -164,11 +164,21 @@
     .colunms {
         margin-top: 0px;
     }
+
+    .colunm_card1,
+    .colunm_card3 {
+        border-radius: 0px 0px 0px 0px;
+    }
 }
 
 @media screen and (max-width: 500px) {
     .colunm_content {
         margin: 0 15px;
+    }
+
+    .colunm_card1,
+    .colunm_card3 {
+        border-radius: 0px 0px 0px 0px;
     }
 }
 
