--- a/src/css/flexBox.css
+++ b/src/css/flexBox.css
@@ -152,6 +152,27 @@
 
 
 
+/* description btn */
+.des_btn {
+    position: relative;
+    top: 0;
+    left: 40%;
+    background: var(--third-card--colunm-color);
+    margin-top: 70px;
+    display: inline-block;
+    width: 150px;
+    height: 40px;
+    box-shadow: 1px 0px 3px rgba(227, 227, 227, .4);
+    border: none;
+    outline: none;
+    border-radius: 30px;
+    color: var(--button-background-color);
+    transition: all 0.5s ease-in;
+    transition-property: background;
+    cursor: pointer;
+}
+
+
 @media  (max-width: 768px) {
     #colunm {
         height: 100%;
@@ -169,6 +190,12 @@
     .colunm_card3 {
         border-radius: 0px 0px 0px 0px;
     }
+
+    .des_btn {
+        position: relative;
+        top: -40px;
+        left: 37%;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -180,6 +207,11 @@
     .colunm_card3 {
         border-radius: 0px 0px 0px 0px;
     }
+
+    .des_btn {
+        position: relative;
+        left: 28%;
+    }
 }
 
 @media screen and (max-width: 187px) {
@@ -188,5 +220,4 @@
     .colunm_card3 {
        width: 370px;
     }
-    
 }
