--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,6 +29,8 @@ body {
     font-weight: 400;
     font-style: normal;
     font-size: 15px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 
