--- a/src/css/flexBox.css
+++ b/src/css/flexBox.css
@@ -174,6 +174,11 @@
 }
 
 
+.des_btn {
+    position: relative;
+    top: -60px;
+}
+
 @media  (max-width: 768px) {
     #colunm {
         height: 100%;
